// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 451165,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 528996,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 639098,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 430783,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 343345,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 366384,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing no initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 318021,
}
`;

exports[`TWAMM Hook #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 472492,
}
`;

exports[`TWAMM Hook #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 164053,
}
`;
